--- a/client/src/app/components/auth/login/login.component.html
+++ b/client/src/app/components/auth/login/login.component.html
@@ -25,7 +25,7 @@
       Password is required.
     </div>
     <div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Login</button>
     </div>
   </div>
 </form>
