--- a/client/src/app/components/products/details/details.component.html
+++ b/client/src/app/components/products/details/details.component.html
@@ -8,7 +8,7 @@
         <p>{{product.description}}</p>
         <h5>{{product.price}}</h5>
         <br>
-        <button (click)="handleOrder(product.id)" class="pull-left btn btn-primary">Buy Me</button>
+        <button (click)="handleOrder(product.id)" class="pull-left btn btn-primary">Buy</button>
     </div>
 </div>
 
