--- a/client/src/app/components/admin/create-product/create-product.component.html
+++ b/client/src/app/components/admin/create-product/create-product.component.html
@@ -1,5 +1,5 @@
 <app-heading [title]="'Create New Product'"></app-heading>
-<form [formGroup]="form" (ngSubmit)="handleSubmit()">
+<form class="push-down" [formGroup]="form" (ngSubmit)="handleSubmit()">
     <div class="p-3 p-lg-5 border">
         <div class="form-group">
           <label for="exampleFormControlInput1">Title</label>
