--- a/client/src/app/components/admin/edit-product/edit-product.component.html
+++ b/client/src/app/components/admin/edit-product/edit-product.component.html
@@ -1,6 +1,6 @@
 <app-heading [title]="'Edit Product'"></app-heading>
 
-<form [formGroup]="form" (ngSubmit)="handleSubmit()">
+<form class="push-down" [formGroup]="form" (ngSubmit)="handleSubmit()">
     <div class="p-3 p-lg-5 border">
         <div class="form-group">
           <label for="exampleFormControlInput1">Title</label>
