--- a/client/src/app/components/comments/create-comment/create-comment.component.html
+++ b/client/src/app/components/comments/create-comment/create-comment.component.html
@@ -1,4 +1,4 @@
-<form #f="ngForm" (ngSubmit)="handleSubmit(f)" >
+<form class="push-down" #f="ngForm" (ngSubmit)="handleSubmit(f)" >
   <div class="col-md-12 p-3 p-lg-5 border">
     <div class="form-group">
       <!-- <label for="exampleInputEmail1">Content</label> -->
@@ -20,7 +20,7 @@
       <hr>
     <pre *ngIf="rating">Rate: <span class="stars" >{{rating}}</span></pre>
 
-  <div>
+    <div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </div>
   </div>
