--- a/client/src/app/components/comments/show-comment/show-comment.component.css
+++ b/client/src/app/components/comments/show-comment/show-comment.component.css
@@ -40,3 +40,20 @@
     /* font-size: 34px; */
     color:#007bff;
 }
+/* img {
+	display: block;
+	max-width:200px;
+	max-height:200px;
+	width: auto;
+	height: auto;
+} */
+
+/* img {
+    position: relative;
+    float: left;
+    width:  173px;
+    height: 200px;
+    background-position: 50% 50%;
+    background-repeat:   no-repeat;
+    background-size:     cover;
+} */
