--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-3">
         <app-categories></app-categories>
     </div>
-    <div class="col-md-9">
+    <div class="push-down col-md-9">
         <app-product></app-product>
     </div>
 </div>
